add config marshall/unmarshall test
